--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -12,12 +12,12 @@ spring:
     database-platform: org.hibernate.dialect.MySQL8Dialect
 
   datasource:
-    url: jdbc:mysql://localhost:3306/paymentdb
+    url: jdbc:mysql://${DB_HOST:localhost}:3306/paymentdb
     username: root
     password: root
 
   config:
-    import: configserver:http://localhost:9296
+    import: configserver:http://${CONFIG_SERVER_URL:localhost}:9296
 
 management:
   tracing:
